# dzone-tr-ai-retrieval-starter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: eval_set.json  sources.yaml  workflow.yaml
scripts/: run_demo.py
src/retrieval_starter/: __init__.py  app.py  chunking.py  contracts.py  corpus.py  evaluate.py  indexer.py  monitoring.py  retrieval.py  rollout.py  search.py
tests/: test_retrieval.py
