[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dzone-tr-ai-retrieval-starter"
version = "0.1.0"
description = "Dependency-free starter for production-style AI retrieval over existing data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jubin Abhishek Soni" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
